# HighGravity

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  check  prepare  run
data/: example.json
src/: high_gravity.cpp  high_gravity.hpp  main_render.cpp
